@@ -1,5 +1,3 @@
-Give 10 titles for the article about "Time Tracking" on "Info" page of the app. Should be less than 80 characters.
+Give 10 titles. Should be less than 80 characters. No need to include "Increaser" since it's already in the app.
 
-Write a short paragraph that will be used as a subtitle. You can also think of it as a first paragraph of the article. It will be located between the title and the video.
-
-We have a title, first paragraph, and a video. Now write an article explaining "Task Management", all its functionality, and how it relates to other tools in the app. Keep the article short, but it still should serve as a knowledge base for the user. Keep it engaging an informative. Return it as a code snippet with an unstyled HTML.
+Write an article for the "Info" page of the app explaining "Task Management", all its functionality, and how it relates to other tools in the app. Keep the article short, but it still should serve as a knowledge base for the user. Keep it engaging an informative. Return it as a code snippet with an unstyled HTML.
