@@ -1,1 +1,1 @@
-I want to have a YouTube video explaining each primary concept/feature/tool in the app. Write a script for "Tasks management". This video should be engaging and informative, and should cover all the important aspects of the tool and how it relates to other features in the app. Keep it short and to the point, and make sure to highlight the benefits of using the tool. Return it as a plain text ready to be put in teleprompter without any styling or comments, only exactly what I will say in the video. Start the video with a short greeting, e.g. "Hey! Radzion here"
+I want to have a YouTube video explaining each primary concept/feature/tool in the app. Write a script for "Habits". This video should be engaging and informative, and should cover all the important aspects of the tool and how it relates to other features in the app. Keep it short and to the point, and make sure to highlight the benefits of using the tool. Return it as a plain text ready to be put in teleprompter without any styling or comments, only exactly what I will say in the video. Start the video with a short greeting, e.g. "Hey! Radzion here"
