@@ -1,0 +1,17 @@
+Hey! Radzion here. Today, I'm excited to show you how you can build lasting habits with Increaser's Habits tool. Whether you're looking to develop healthier routines or stay consistent with your goals, this tool is designed to help you stay on track.
+
+Habits are the building blocks of a successful life. With the Habits tool, you can create and track daily habits that align with your vision and goals. Imagine you want to read every day, exercise regularly, or meditate each morning. Increaser makes it simple to keep these habits visible and keep yourself accountable.
+
+On the Habits page, you have two main sections: Track and Explore. The Track section is where the magic happens—it shows your daily habits, consistency, and streaks. Each habit comes with a progress ring, letting you see how consistent you’ve been over time. Plus, you can track your streaks to keep that motivation going.
+
+You can write a simple plan for yourself. When exactly will you do it? After your first cup of coffee, maybe? This plan helps you make the habit stick. It’s about making it a specific, actionable part of your day.
+
+The Explore section is where you can get ideas for new habits. We’ve got suggestions for health, relationships, and work—all to inspire you on your journey to a more fulfilling life.
+
+And if you forget to track your habits? Don’t worry—you’ll get a reminder in the sidebar if you haven’t visited the Habits page that day.
+
+One of the best parts is how Habits integrates with your goals. Habits are key to reaching your goals, so you can connect your habits directly to any of your set goals, making it easier to stay on course. In addition to daily habits, you can set recurring tasks to help achieve your goals. Use habits for building daily routines, and recurring tasks for weekly or monthly actions that keep you on track toward your bigger goals, giving you the flexibility to work toward your vision in a structured way.
+
+Increaser’s Habits tool is here to help you stay accountable, build consistency, and celebrate those small wins that add up over time. Start building the habits that support your vision today!
+
+Thanks for watching, and don’t forget to like and subscribe for more productivity tips. I'll see you in the next one!
